Store container-states in workplan-status
